# production-ops-lab

./: .gitignore  Dockerfile  README.md  __init__.py  baseline_local.py  client.py  inference.py  models.py  openenv.yaml  pre_validate.sh  pyproject.toml
lab_target/monolith/: docker-compose.yml
lab_target/monolith/app/: .env.template  Dockerfile  main.py  requirements.txt
lab_target/monolith/db/: init.sql
lab_target/monolith/seed/: seed_data.py
lab_target/monolith/worker/: Dockerfile  scheduler.py  worker.py
scripts/: backend_smoke.py
server/: __init__.py  app.py  backend_base.py  command_gateway.py  constants.py  fake_backend.py  production_ops_environment.py  real_backend.py  reset_orchestrator.py  reward_engine.py  scenario_generator.py  task_models.py  world_spec.py
server/injectors/: __init__.py  monolith_injectors.py
tests/: conftest.py  test_command_gateway.py  test_environment.py  test_inference.py  test_real_backend.py  test_reset_orchestrator.py  test_scenarios.py  test_submission_inference.py
